# filmseer

./: .gitignore  FilmFinder.code-workspace  README.md
backends/serverapp-fastapi/: .env.template  .flake8  README.md  logging.conf  pyproject.toml
backends/serverapp-fastapi/app/: main.py
backends/serverapp-fastapi/app/api/v1/: README.md
backends/serverapp-fastapi/app/api/v1/routers/: __init__.py  banlist.py  index.py  movie.py  movies.py  review.py  review_emoji.py  session.py  user.py  wishlist.py
backends/serverapp-fastapi/app/api/v1/routers/hello/: world.py  world2.py
backends/serverapp-fastapi/app/core/: config.py  database.py  error_pages.py  errors.py  session.py  static_router.py
backends/serverapp-fastapi/app/models/: README.md  common.py
backends/serverapp-fastapi/app/models/db/: __init__.py  banlists.py  funny_votes.py  genres.py  helpful_votes.py  movie_genres.py  movies.py  people.py  positions.py  profile_images.py  ratings.py  reports.py  reviews.py  spoiler_votes.py  users.py  wishlists.py
backends/serverapp-fastapi/app/utils/: cookie.py  password.py  ratings.py  recommender.py  unique_id.py  wrapper.py
backends/serverapp-fastapi/app/utils/dict_storage/: __init__.py  redis.py
backends/serverapp-fastapi/scripts/: setup.py  start.py  train.py  vscode.py
backends/serverapp-fastapi/templates/emails/: README.md
error-pages/404/: index.html
frontends/webapp-react/: .env.template  .eslintrc  package-lock.json  package.json
public/: asset-manifest.json  index.html  precache-manifest.82bd16b98a12d6b12b5efb7f160ef790.js  service-worker.js
(+96 files in other folders)
