[tool.poetry]
name = "app"
version = "0.1.0"
description = "The server app of FilmFinder"
authors = ["Daheng Wang <z5234730@unsw.edu.au>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.61.1"
uvicorn = { extras = ["watchgodreload"], version = "^0.11.8" }
celery = "^4.4.7"
tenacity = "^6.2.0"
tortoise-orm = "^0.16.15"
asyncpg = "^0.21.0"
pydantic = { extras = ["email", "dotenv"], version = "^1.6.1" }
gunicorn = "^20.0.4"
aiofiles = "^0.5.0"
python-multipart = "^0.0.5"
aioredis = "^1.3.1"
hiredis = "^1.1.0"
python-dotenv = "^0.14.0"
elasticsearch = { extras = ["async"], version = "^7.9.1" }
argon2-cffi = "^20.1.0"
tldextract = "^2.2.3"
cryptography = "^3.1.1"
pyhumps = "^1.6.1"
sshtunnel = "^0.1.5"
elasticsearch-dsl = "^7.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.782"
black = "^20.8b1"
isort = "^5.5.2"
autoflake = "^1.4"
flake8 = "^3.8.3"
pytest-cov = "^2.10.1"

[tool.poetry.scripts]
vscode-setup = "scripts.vscode:setup"
start = "scripts.start:start"
setup = "scripts.setup:setup_clean"
setup-noclean = "scripts.setup:setup_noclean"
setup-nodrop = "scripts.setup:setup_nodrop"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[tool.black]
line-length = 88
target-version = ["py38"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
